[package]
name = "Fanouni-security-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }

axum =  "0.8"
axum-extra ="0.12"

tower-http = { version = "0.6", features = ["cors"] }
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

dotenv = "0.15"
once_cell = "1.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
