[package]
name = "psg"
version = "0.4.0"
edition = "2024"
authors = ["Sultan Majed"]
homepage = "https://github.com/ex-jandal/proxy-security-guard"
license = "MIT"
keywords = ["security", "guard", "proxy"]

[profile.release]
codegen-units = 1          # reduces binary size by ~2%
debug = "none"
lto = true                 # reduces binary size by ~14%
opt-level = "s"            # reduces binary size by ~25%
panic = "abort"            # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed" # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"          # See split-debuginfo - allows us to drop the size by ~65%
incremental = true         # Improves re-compile times

[dependencies]
tokio = { version = "1.49", features = ["full"] }

axum = { version = "0.8", features = ["multipart"] }
futures-util = "0.3"

tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", features = ["json", "form", "multipart"] }
serde = { version = "1.0", features = ["derive"] }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

ed25519-dalek = { version = "2.2", features = ["rand_core"] }
# rand = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

dotenv = "0.15"
once_cell = "1.21"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
